binread/tests/errors/invalid_assert_args.stderr
error: too many arguments
 --> $DIR/invalid_assert_args.rs:4:31
  |
4 | #[br(assert(false, "message", "too", "many", "arguments"))]
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^
